<resources>
    <string name="app_name">Messenger</string>
    <string name="messenger">M   E   S   S   E   N   G   E   R</string>
    <string name="contacts">Contacts</string>
    <string name="messages">Messages</string>
    <string name="profile">Profile</string>
    <string name="default_num">+31 X XXXX-XXXX</string>
    <string name="user_number">Phone number</string>
    <string name="user_fullname">First and last name</string>
    <string name="setting_change_exit">Exit</string>
    <string name="reg_phone_number">Your phone number</string>
    <string name="code_hint">*   *   *   *   *   *</string>
    <string name="username">Username</string>
    <string name="sign_out">Sign out</string>
    <string name="settings_fullname">Enter your first and last name</string>
    <string name="no_info">no info</string>
    <string name="search_contacts">Search Contacts...</string>
    <string name="welcome">Welcome!</string>
    <string name="enter_phone">Please enter your phone number</string>
    <string name="bio">Bio</string>
    <string name="edit_photo">edit photo</string>
    <string name="we_will_send_you_verification_code_to_your_phone">We will send verification code to your phone</string>
    <string name="clear_chat">Clear chat</string>
    <string name="delete_chat">Delete chat</string>
    <string name="edit_info">Edit info</string>
    <string name="delete_photo">Delete photo</string>
    <string name="updated">Updated</string>
    <string name="chats">Chats</string>
    <string name="message_hint">Message...</string>
    <string name="online_fromLayout">online</string>
    <string name="back_arrow">back arrow</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="tell_about_yourself">Tell about yourself</string>

</resources>