<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.messengerapplication.ui.fragments.authentication.EnterPhoneNumFragment"
    android:orientation="vertical"
    android:background="@color/ivory">

    <LinearLayout
        android:id="@+id/header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/reg_header">

        <TextView
            android:text="@string/messenger"
            android:letterSpacing="0.3"
            style="@style/reg_header_text" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/input"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintVertical_bias="0.386"
        style="@style/reg_constlay">

        <TextView
            android:id="@+id/input_phone_label1"
            style="@style/reg_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_horizontal"
            android:layout_marginEnd="@dimen/margin_horizontal"
            android:gravity="center"
            android:textColor="@color/blue"
            android:textSize="@dimen/large_text"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/input_phone_label2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/we_will_send_you_verification_code_to_your_phone"
            android:textColor="@color/blue"
            android:textSize="@dimen/normal_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_phone_label1" />

        <EditText
            android:id="@+id/reg_code_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_horizontal"
            android:layout_marginTop="@dimen/margin_vertical"
            android:layout_marginEnd="@dimen/margin_horizontal"
            android:clickable="true"
            android:focusable="true"
            android:hint="@string/default_num"
            android:inputType="phone"
            android:maxLines="1"
            android:padding="@dimen/AppPadding"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:gravity="center"
            android:textSize="@dimen/large_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:digits="1234567890+-() "
            app:layout_constraintTop_toBottomOf="@+id/input_phone_label2" />

        <Button
            android:id="@+id/reg_next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Send code"
            style="@style/Widget.AppCompat.Button.Colored"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/margin_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reg_code_num" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>