<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.messengerapplication.ui.fragments.single_chat.SingleChatFragment">

    <LinearLayout
        android:id="@+id/background_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.4"
        android:background="@drawable/quartz_bg"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar_cl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="3dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_horizontal"
            android:background="@color/white"
            android:src="@drawable/ic_arrow_left"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/back_arrow" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/toolbar_img"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="@dimen/margin_horizontal"
            android:src="@drawable/ic_default_user"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/back_btn"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/toolbar_contact_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/purple"
            android:textSize="@dimen/normal_text"
            android:text="@string/username"
            app:layout_constraintStart_toEndOf="@+id/toolbar_img"
            app:layout_constraintTop_toTopOf="@+id/toolbar_img" />

        <TextView
            android:id="@+id/toolbar_contact_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/purple_500"
            android:text="@string/online_fromLayout"
            android:textSize="@dimen/small_text"
            app:layout_constraintStart_toEndOf="@+id/toolbar_img"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_contact_name" />

        <ImageView
            android:id="@+id/menu_btn"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:src="@drawable/ic_ellypsis_vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="@dimen/top_icon_margin"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/res_view_contain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/edit_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_cl">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/chat_swipe"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rc_message"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:descendantFocusability="blocksDescendants"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/message_item" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/edit_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/white"
        android:elevation="3dp">

        <EditText
            android:id="@+id/chat_input_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/message_hint"
            android:textSize="@dimen/normal_text"
            android:padding="@dimen/message_padding"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:backgroundTint="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/send_message_btn"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:id="@+id/send_message_btn"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:src="@drawable/ic_send"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="@dimen/ic_padding_size"
            app:layout_constraintTop_toTopOf="@+id/chat_input_message" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>